--- a/package.json
+++ b/package.json
@@ -3,14 +3,41 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "test": "jest",
+    "prepare": "husky",
+    "validate": "pnpm run lint && pnpm run test"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "engines": {
     "node": "22.4.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "7.24.7",
+    "@babel/preset-env": "7.24.7",
+    "@babel/preset-typescript": "7.24.7",
+    "@commitlint/cli": "19.3.0",
+    "@commitlint/config-conventional": "19.2.2",
+    "@testing-library/jest-dom": "6.4.6",
+    "@testing-library/react": "16.0.0",
+    "@types/jest": "29.5.12",
+    "@types/react": "18.3.3",
+    "eslint": "8",
+    "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-next": "0.0.0",
+    "eslint-plugin-react": "7.34.3",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "husky": "9.0.11",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "lint-staged": "15.2.7",
+    "prettier": "3.3.2"
   }
 }
