--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.2.0"
   },
   "engines": {
-    "node": "22.4.0"
+    "node": "22.4.0",
+    "pnpm": "9.5.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "7.24.7",
