--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "bishal-swing-app",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -11,6 +12,10 @@
     "validate": "pnpm run lint && pnpm run test"
   },
   "dependencies": {
+    "@nextui-org/button": "2.0.34",
+    "@nextui-org/system": "2.2.2",
+    "@nextui-org/theme": "2.2.6",
+    "framer-motion": "11.3.2",
     "next": "14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -20,15 +25,15 @@
     "pnpm": "9.5.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "7.24.7",
-    "@babel/preset-env": "7.24.7",
-    "@babel/preset-typescript": "7.24.7",
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
+    "@swc/core": "1.7.0-nightly-20240713.1",
+    "@swc/jest": "0.2.36",
     "@testing-library/jest-dom": "6.4.6",
     "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
     "@types/react": "18.3.3",
+    "autoprefixer": "10.4.19",
     "eslint": "8",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "9.1.0",
@@ -39,6 +44,8 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "lint-staged": "15.2.7",
-    "prettier": "3.3.2"
+    "postcss": "8.4.39",
+    "prettier": "3.3.2",
+    "tailwindcss": "3.4.4"
   }
 }
