--- a/.github/workflows/pull-request-check.yml
+++ b/.github/workflows/pull-request-check.yml
@@ -5,7 +5,7 @@ on:
       - main
 
 jobs:
-  validate:
+  setup-cache:
     runs-on: ubuntu-latest
     steps:
       - name: Fetch PR Code
@@ -17,6 +17,51 @@ jobs:
       - name: Environment Initialization
         uses: ./.github/composite-actions/env-initialization
 
+  validate:
+    runs-on: ubuntu-latest
+    needs: [setup-cache]
+    steps:
+      - name: Fetch PR Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
+
+      - name: Environment Initialization with no install
+        uses: ./.github/composite-actions/env-initialization
+        with:
+          allow-install: 'false'
+
       - name: Run Validation
         run: |
           pnpm run validate
+
+  test:
+    runs-on: ubuntu-latest
+    needs: [setup-cache]
+    steps:
+      - name: Fetch PR Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
+
+      - name: Environment Initialization with no install
+        uses: ./.github/composite-actions/env-initialization
+        with:
+          allow-install: 'false'
+
+      - name: Run Tests
+        run: |
+          pnpm run test
+
+  done:
+    runs-on: ubuntu-latest
+    needs: [test, validate]
+    if: always()
+    steps:
+      - name: Check for failures
+        if: ${{  needs.validate.result == 'failure' || needs.test.result == 'failure' }}
+        run: |
+          echo "Failure on checks"
+          exit 1
