--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,15 +20,21 @@
     ],
     "paths": {
       "@/auth": ["./src/context/auth"],
-      "@/entities/*": ["./src/business/entities/*"],
-      "@/repositories/*": ["./src/business/repositories/*"],
-      "@/use-cases/*": ["./src/business/use-cases/*"],
       "@/components/*": ["./src/implementation/components/*"],
+      "@/entities/*": ["./src/business/entities/*"],
       "@/impl-mongodb/*": ["./src/implementation/mongodb/*"],
-      "@/utils/*": ["./src/utils/*"],
-      "@/server-context/*": ["./src/context/server/*"]
+      "@/repositories/*": ["./src/business/repositories/*"],
+      "@/server-context/*": ["./src/context/server/*"],
+      "@/use-cases/*": ["./src/business/use-cases/*"],
+      "@/utils/*": ["./src/utils/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "global.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
