--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "prepare": "husky",
     "validate": "pnpm run format:check && pnpm run lint"
   },
